🆕 feat: Add login with email and password on client

--- a/public/index.html
+++ b/public/index.html
@@ -50,47 +50,35 @@
           </button>
         </div>
   
-        <div class="col-sm-6"></div>
+        <div class="col-sm-6">
+          <h1>Login</h1>
+          
+          <form class="d-grid">
+            <input 
+              type="text" 
+              name="email" 
+              id="email" 
+              class="form-control mb-2"
+              placeholder="Email"
+            />
+  
+            <input 
+              type="password" 
+              name="password" 
+              id="password" 
+              class="form-control mb-2"
+              placeholder="Password"
+            />
+  
+            <button class="btn btn-primary">
+              Sign In
+            </button>
+          </form>
+        </div>
       </div>
     </main>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-
-    <script>
-      function handleCredentialResponse(response) {
-        // Google Token: ID_TOKEN
-        // const responsePayload = decodeJwtResponse(response.credential);
-        // console.log(response.credential);
-
-        const body = {
-          id_token: response.credential
-        };
-        
-        fetch('http://localhost:8080/api/auth/google', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify(body)
-        })
-          .then(resp => resp.json())
-          .then(data => {
-            console.log(data);
-            localStorage.setItem('email', data.user.email);
-          })
-          .catch(console.warn);
-      }
-
-      const button = document.getElementById('google_signout');
-      button.onclick = () => {
-        console.log(google.accounts.id);
-        google.accounts.id.disableAutoSelect();
-
-        google.accounts.id.revoke(localStorage.getItem('email'), done => {
-          localStorage.clear();
-          location.reload();
-        });
-      }
-    </script>
+    <script src="./js/auth.js"></script>
   </body>
 </html>
